dodano malo u dokumentaciju :)

--- a/documentation/diplomski.tex
+++ b/documentation/diplomski.tex
@@ -1,4 +1,5 @@
 \documentclass[times, utf8, diplomski]{fer}
+
 \usepackage{booktabs}
 
 \begin{document}
@@ -11,6 +12,7 @@
 
 % TODO: Navedite vaše ime i prezime.
 \author{Arthur Dent}
+\author{Matea Đonlić\\Marko Đurasević\\Maja Kontrec}
 
 \maketitle
 
