Major revision of code characters changed to byte for space efficiency

--- a/documentation/LaTeX dokumentacija/Dokumentacija.tex
+++ b/documentation/LaTeX dokumentacija/Dokumentacija.tex
@@ -11,12 +11,11 @@
 \usepackage{mathptmx}
 \usepackage{courier}
 \usepackage[scaled]{helvet}
-\usepackage[round]{natbib}
-\usepackage[colorlinks=true,linkcolor=black]{hyperref}
+\usepackage[square]{natbib}
+\usepackage[colorlinks=false,linkcolor=black,hidelinks=true]{hyperref}
 \usepackage{lscape}
 \usepackage{titlesec}
 \usepackage{fullpage}
-\usepackage{natbib}
 \usepackage[parfill]{parskip}
 \usepackage{mathtools}
 
@@ -44,8 +43,8 @@
 
 
 \chapter{Literatura}
-\bibliography{literatura}
+%\bibliography{literatura}
 %\bibliographystyle{fer}
-\bibliographystyle{unsrt}
-
+%\bibliographystyle{unsrt}
+\bibliography{ieeetr} 
 \end{document}
