--- a/documentation/LaTeX dokumentacija/literatura.bib
+++ b/documentation/LaTeX dokumentacija/literatura.bib
@@ -40,3 +40,13 @@
 	Pages = {841-850},
 	Title = {High-order entropy-compressed text indexes},
 	Year = {2003}}
+
+@article{fm1,
+	Author = {Paolo Ferragina, Giovanni Manzini},
+	Date-Added = {2014-01-03 03:04:49 +0000},
+	Date-Modified = {2014-01-03 03:05:11 +0000},
+	Journal = {Foundations of Computer Science, 2000. Proceedings. 41st Annual Symposium on Foundations of Computer Science},
+	Pages = {390-398},
+	Title = {Opportunistic Data Structures with Applications},
+	Year = {2000}}
+
